--- a/Order summary component challenge/style.css
+++ b/Order summary component challenge/style.css
@@ -3,15 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-body {
-    background-color: hsl(225, 100%, 94%);
+body{
+    background-color: rgb(224,232,255);
+}
+.mainwrapper {
+    width:100vw;
+    height: 100vh;
+         background-image: url(images/pattern-background-desktop.svg);
+         background-size: contain;
+         background-repeat: no-repeat;
     font-family: 'Red Hat Display', sans-serif;
-
 }
 
 p {
-    color: rgb(102, 101, 101);
+    color: rgb(148, 144, 144);
 }
 
 .wrapper {
@@ -20,11 +25,13 @@ p {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
-    height: 80%;
+    height: 85%;
     text-align: center;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 20px;
     overflow: hidden;
+    max-width: 375px;
+    max-height: 700px;
 
 }
 
@@ -32,6 +39,8 @@ p {
     height: 25vh;
     background-image: url(images/illustration-hero.svg);
     background-size: cover;
+    max-height: 250px;
+    background-position: center;
 
 }
 
@@ -44,7 +53,7 @@ h1 {
     margin: 20px auto;
     font-weight: 900;
     font-size: 25px;
-       color: rgb(27, 39, 80);
+    color: rgb(27, 39, 80);
 }
 
 .title p {
@@ -60,56 +69,93 @@ h1 {
     display: flex;
     height: 15%;
 }
+
 .col1,
 .col2,
 .col2+p {
     margin: auto;
 }
+
 .col1 {
     background-image: url(images/icon-music.svg);
-    width:50px;
+    width: 50px;
     height: 50px;
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 20px;
-    
+
 }
+
 .col2 {
     width: 50%;
-    padding-right:40px;
+    padding-right: 15px;
     line-height: 25px;
-    
+
 }
-.col2 p:nth-child(1){
-        color:hsl(223, 47%, 23%);
-        font-weight: 900;
+
+.col2 p:nth-child(1) {
+    color: hsl(223, 47%, 23%);
+    font-weight: 900;
 }
-.col2 + p {
-    width:25%; 
-    color:hsl(223, 47%, 23%);
+
+.col2+p {
+    width: 25%;
+    color: hsl(223, 47%, 23%);
     font-weight: 900;
     text-decoration: underline;
     font-size: 14px;
 }
 
-.proceed{
+.col2+p:hover {
+    color: rgb(49, 33, 223);
+    cursor: pointer;
+}
+
+.proceed {
     width: 90%;
     height: 50px;
     background-color: rgb(56, 41, 228);
     margin: 20px auto;
     border-radius: 10px;
-    box-shadow: 0 10px 10px rgb(83, 68, 255);
-    
-  
+    box-shadow: 0 20px 20px rgba(167, 137, 236, 0.267);
+}
 
-}
 .proceed p {
-  color:white;
-  line-height:50px;
-  font-weight: bold;
+    color: white;
+    line-height: 50px;
+    font-weight: bold;
 }
+.proceed:hover{
+        cursor: pointer;
+        background-color: rgb(118,108,241);      
+}
+
 footer {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    text-align: center;
+    color: #807d7d;
+    font-size: 12px;
+}
+
+.cancel {
+    margin-top: 30px;
+    font-weight: 900;
+    color: #807d7d;
+}
+.cancel:hover{
+    color: black;
+    cursor: pointer;
+}
+
+@media screen and (min-width: 1400px){
+   .mainwrapper {
+        background-image: url(images/pattern-background-desktop.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position-y: -20%;
+    }
 }
