--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -8,7 +8,9 @@ body {
     font-family: 'Kumbh Sans',
         sans-serif;
 }
-
+h1{
+    font-size: 1.8rem;
+}
 /* TOP PANEL  */
 .topPanel {
     position: fixed;
@@ -30,6 +32,7 @@ body {
 
 .topPanel .menu {
     width: 20%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,9 +60,43 @@ body {
 
 /* MENU */
 
-.menu-mobile {
+nav.menu-mobile {
     position: fixed;
     left: -100%;
+    top: 0;
+    display: flex;
+    transition: 0.5s;
+}
+nav.active {
+    left: 0;
+}
+.menu-mobile ul {
+    height: 100vh;
+    background-color: white;
+    width: 65vw;
+}
+.menu-mobile div {
+  height: 100vh;
+  width: 35vw;
+  background-color: rgba(0, 0, 0, 0.733);
+}
+nav.menu-mobile ul {
+    list-style: none;
+}
+nav.menu-mobile ul li:nth-child(1) {
+    margin: 1em 0 1.5em 0.8em;
+}
+nav.menu-mobile li {
+    color: black;
+    padding: 0.8em;
+    margin-left: 1em;
+
+}
+nav.menu-mobile li a {
+color: black;
+text-decoration: none;
+font-weight: 700;
+font-size: 1.2rem;
 }
 
 /* PRODUCT - photo */
@@ -151,14 +188,14 @@ div.counter {
     width: 20%
 }
 
-.addToCart {
+div.addToCart {
     width: 90vw;
-  
     display: flex;
     justify-content: center;
     background-color: hsl(26, 100%, 55%);
     margin: 1em auto;
     color: white;
+    box-shadow: 0 1em 1.5em hsl(26, 100%, 82%);
 }
 .addToCart div{
  background-color: white;
@@ -176,7 +213,10 @@ height: 4rem;
 /* footer */
 
 footer {
+    margin-top: 3em;
     position: relative;
     bottom: 0;
-    left: 0;
+    width: 100%;
+    text-align: center;
+    z-index: -1;
 }
