--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -16,7 +16,7 @@ h1{
     position: fixed;
     top: 0;
     left: 0;
-    height: 4em;
+    height: 4.2rem;
     width: 100vw;
     background-color: white;
 }
@@ -111,6 +111,7 @@ font-size: 1.2rem;
 
 .productPhoto img {
     width: 100%;
+    height: 20rem;
 }
 
 /* PRODUCT - description */
@@ -208,6 +209,36 @@ mask-position: url(icon.svg);
 width: 3rem;
 height: 4rem;
 
+}
+.displayCart {
+    width:95vw;
+    min-height: 16rem;
+    background-color: white;
+    position: fixed;
+    top: 4.8rem;
+    left:50%;
+    transform: translateX(-50%);
+    margin: 0 auto;
+    border-radius: 20px;
+    box-shadow: 0 2em 4em rgba(17, 12, 12, 0.253);
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.displayCart p {
+    font-weight: 700;
+    padding: 1.5em;
+    width: 100%;
+    border-bottom: rgb(206, 206, 206) solid 1px;  
+}
+.displayCart p + p {
+      border-bottom: none;
+      text-align: center;
+      margin: auto;
+}
+.displayCart.active {
+    display: block;
 }
 
 /* footer */
