--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -8,9 +8,11 @@ body {
     font-family: 'Kumbh Sans',
         sans-serif;
 }
-h1{
+
+h1 {
     font-size: 1.8rem;
 }
+
 /* TOP PANEL  */
 .topPanel {
     position: fixed;
@@ -59,6 +61,10 @@ h1{
     display: inline-block;
 }
 
+.desktop.topPanel {
+    display: none;
+}
+
 /* MENU */
 
 nav.menu-mobile {
@@ -66,38 +72,46 @@ nav.menu-mobile {
     left: -100%;
     top: 0;
     display: flex;
+    z-index: 30;
     transition: 0.5s;
 }
+
 nav.active {
     left: 0;
 }
+
 .menu-mobile ul {
     height: 100vh;
     background-color: white;
     width: 65vw;
 }
+
 .menu-mobile div {
-  height: 100vh;
-  width: 35vw;
-  background-color: rgba(0, 0, 0, 0.733);
+    height: 100vh;
+    width: 35vw;
+    background-color: rgba(0, 0, 0, 0.733);
 }
+
 nav.menu-mobile ul {
     list-style: none;
 }
+
 nav.menu-mobile ul li:nth-child(1) {
     margin: 1em 0 1.5em 0.8em;
 }
+
 nav.menu-mobile li {
     color: black;
     padding: 0.8em;
     margin-left: 1em;
 
 }
+
 nav.menu-mobile li a {
-color: black;
-text-decoration: none;
-font-weight: 700;
-font-size: 1.2rem;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.2rem;
 }
 
 /* PRODUCT - photo */
@@ -108,30 +122,32 @@ font-size: 1.2rem;
 
 .productPhoto {
     width: 100vw;
-        position: relative;
+    position: relative;
 }
 
 .productPhoto img {
     width: 100%;
 }
+
 .productPhoto img.arrow {
     position: absolute;
     z-index: 20;
     width: 0.7em;
     height: 0.8em;
-border: solid white 1em;
-box-sizing: content-box;
+    border: solid white 1em;
+    box-sizing: content-box;
     background-color: white;
     top: 50%;
-    transform:translateY(-50%);
+    transform: translateY(-50%);
     left: 0.8em;
-border-radius: 50%;
+    border-radius: 50%;
 }
-.productPhoto img.arrow ~img{
-    left: inherit;
-   right: 0.8em;
 
-} 
+.productPhoto img.arrow~img {
+    left: inherit;
+    right: 0.8em;
+
+}
 
 /* PRODUCT - description */
 .product-description {
@@ -217,25 +233,27 @@ div.addToCart {
     color: white;
     box-shadow: 0 1em 1.5em hsl(26, 100%, 82%);
 }
-.addToCart div{
- background-color: white;
- -webkit-mask-image: url(images/icon-cart.svg);
- mask-image: url(icon.svg);
--webkit-mask-repeat: no-repeat;
- mask-repeat: url(icon.svg);
--webkit-mask-position: center;
-mask-position: url(icon.svg);
-width: 3rem;
-height: 4rem;
+
+.addToCart div {
+    background-color: white;
+    -webkit-mask-image: url(images/icon-cart.svg);
+    mask-image: url(icon.svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: url(icon.svg);
+    -webkit-mask-position: center;
+    mask-position: url(icon.svg);
+    width: 3rem;
+    height: 4rem;
 
 }
+
 .displayCart {
-    width:95vw;
+    width: 95vw;
     min-height: 16rem;
     background-color: white;
     position: fixed;
     top: 4.8rem;
-    left:50%;
+    left: 50%;
     transform: translateX(-50%);
     margin: 0 auto;
     border-radius: 20px;
@@ -249,13 +267,15 @@ height: 4rem;
     font-weight: 700;
     padding: 1.5em;
     width: 100%;
-    border-bottom: rgb(206, 206, 206) solid 1px;  
+    border-bottom: rgb(206, 206, 206) solid 1px;
 }
-.displayCart p + p {
-      border-bottom: none;
-      text-align: center;
-      margin: auto;
+
+.displayCart p+p {
+    border-bottom: none;
+    text-align: center;
+    margin: auto;
 }
+
 .displayCart.active {
     display: block;
 }
@@ -269,4 +289,75 @@ footer {
     width: 100%;
     text-align: center;
     z-index: -1;
+}
+
+
+/*DESKTOP VERSION*/
+@media (min-width: 600px) {
+    .mobile.topPanel {
+        display: none;
+    }
+
+    .desktop.topPanel {
+        display: flex;
+        max-width: 1400px;
+    }
+
+    .desktop nav {
+        display: flex;
+        width: 100vw;
+        justify-content: flex-start;
+
+    }
+
+    .desktop .col1 {
+        display: flex;
+        list-style: none;
+        width: 60%;
+        align-items: flex-start;
+    }
+
+    .desktop ul li a {
+        text-decoration: none;
+        padding: 2em;
+    }
+
+
+    /* Skopiowane */
+
+
+    .productWrapper {
+        display: flex;
+    }
+
+    .productPhoto {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .productPhoto img {
+        width: 90%;
+        margin:4rem;
+    }
+
+    .productPhoto img.arrow {
+        display: none;
+    }
+
+
+    /* PRODUCT - description */
+    .product-description {
+        width: 50%;
+       display: flex;
+       flex-direction: column;
+       margin: 4rem;
+
+    }
+
+   .product-description div{
+       width: 100%;
+   }
+
 }
