--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Kumbh Sans',
         sans-serif;
+        min-height: 100vh;
 }
 
 h1 {
@@ -186,8 +187,8 @@ nav.menu-mobile li a {
     font-weight: 700;
     text-align: center;
     width: 3em;
-    height: 2em;
-    line-height: 2em;
+    height: 1.8rem;
+        line-height: 1.8rem;
     border-radius: 10px;
 }
 
@@ -285,19 +286,18 @@ div.addToCart {
 
 footer {
     margin-top: 3em;
-    position: relative;
-    bottom: 0;
+    position: inherit;
     width: 100%;
     text-align: center;
     z-index: -1;
 }
-
+.desktop-gallery{display: none;}
 
 /*DESKTOP VERSION*/
 @media (min-width: 850px) {
     body {
         margin: 0 auto;
-        max-width: 1250px;
+        max-width: 1100px;
         align-items: center;
     }
 
@@ -344,39 +344,55 @@ ul.desktop.col2 li.avatar img{
 ul.desktop.col2 li.cartTopPanel img {
     padding: 2rem 1.5rem;
 }
-
-
-    /* Skopiowane */
-
-
+/*Product */
     .productWrapper {
         display: flex;
         overflow: hidden;
     }
 
     .productPhoto {
-        width: 50%;
+        width: 35%;
+        margin:3em;
         display: flex;
         justify-content: center;
         align-items: center;
+            flex-direction: column;
     }
 
     .productPhoto img {
-        width: 90%;
-        margin: 4rem;
+        width: 100%;
+        border-radius: 10px;
+        margin-bottom: 2em;
     }
 
     .productPhoto img.arrow {
         display: none;
-    }
+        }
 
+.desktop-gallery {
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    justify-content: space-between;
+}
+.desktop-gallery img {
+    padding: 0;
+    width: 20%;
+}
 
     /* PRODUCT - description */
+    h1 {
+        font-size: 2.3rem;
+    }
+    .pricing h1 {
+       font-size: 1.8rem;
+    }
     .desktop-desciption {
-        width: 60%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         margin: 4rem;
+        justify-content: center;
 
     }
 
@@ -388,7 +404,11 @@ ul.desktop.col2 li.cartTopPanel img {
     flex-direction: row;
     width: 100%;
 }
-
+div.counter,
+.addToCart {
+    height: 3.2rem;
+    line-height: 3.2rem;
+}
 div.counter{
 width: 32%;
 }
@@ -412,4 +432,11 @@ width: 10%;
 .pricing h1+div+p {
 width: 90%;
 }
+footer {
+    position: absolute;
+bottom:0;
+left:0;
+}
+
+
 }
